2002-02-01  Camm Maguire  <camm@intech19.enhanced.com>

	* /cvsroot/gcl/gcl/h/solaris.h: Uncommented define of DBEGIN in h/solaris.h

	* /cvsroot/gcl/gcl/unixport/rsym_elf.c: Handle solaris setjmp symbols

	* /cvsroot/gcl/gcl/configure, /cvsroot/gcl/gcl/configure.in:
	test -e -> test -f for solaris in configure.in

2002-01-31  Camm Maguire  <camm@wisdom.m.enhanced.com>
