@@ -49,11 +49,8 @@ TCL_LIBS=-ldl  -lm
 NOTIFY=yes
 GCC=gcc
 
-
-
-
-
-GCLDIR=/fix/f/debian/mm/gcl/gcl
+MP_INCLUDE=h/gmp.h
+GCLDIR=/home/camm/gcl/tmp/gcl-2.4.1
 SHELL=/bin/sh
 MACHINE=386-linux
 
@@ -68,12 +65,12 @@ MACHINE=386-linux
 
 LBINDIR=/usr/local/bin
 
-#OFLAG	=  -O 
-OFLAG	=  -g
+OFLAG	=  -O 
+#OFLAG	=  -g
 LIBS	= -lm 
 
-#ODIR_DEBUG= -O4 
-ODIR_DEBUG= -g
+ODIR_DEBUG= -O4 
+#ODIR_DEBUG= -g
 
 # This CC string will be used for compilation of the system,
 # and also in the compiler::*cc* variable for later compilation of
