@@ -129,19 +129,19 @@ struct longfloat_struct {
 
 
 
-#ifdef _MP_H
+/*  #ifdef _MP_H */
 
-#else
-typedef struct
-{
-  int _mp_alloc;		/* Number of *limbs* allocated and pointed
-				   to by the _mp_d field.  */
-  int _mp_size;			/* abs(_mp_size) is the number of limbs the
-				   last field points to.  If _mp_size is
-				   negative this is a negative number.  */
-  void *_mp_d;		/* Pointer to the limbs.  */
-} __mpz_struct;
-#endif
+/*  #else */
+/*  typedef struct */
+/*  { */
+/*    int _mp_alloc;		 Number of *limbs* allocated and pointed 
+/*  				   to by the _mp_d field.  
+/*    int _mp_size;			 abs(_mp_size) is the number of limbs the 
+/*  				   last field points to.  If _mp_size is 
+/*  				   negative this is a negative number.
+/*    void *_mp_d;		 Pointer to the limbs.  */
+/*  } __mpz_struct; */
+/*  #endif */
 
 struct bignum {
 			FIRSTWORD;
