@@ -43,7 +43,4 @@ TCL_LIBS=@TCL_LIBS@
 NOTIFY=@NOTIFY@
 GCC=@GCC@
 
-
-
-
-
+MP_INCLUDE=@MP_INCLUDE@
