@@ -83,6 +83,10 @@ object sSAmultiply_stacksA;
 int stack_multiple=1;
 static object stack_space;
 
+#ifdef _WIN32
+unsigned int _dbegin = 0x10100000;
+unsigned int _stacktop, _stackbottom;
+#endif
 
 int cssize;
 
@@ -103,6 +107,7 @@ int argc;
 char **argv, **envp;
 {
 	FILE *i;
+        unsigned int dummy;
 #ifdef BSD
 #ifdef RLIMIT_STACK
 	struct rlimit rl;
@@ -121,6 +126,10 @@ char **argv, **envp;
 	RECREATE_HEAP
 #endif
 	
+#ifdef _WIN32
+        _stackbottom = (unsigned int ) &dummy;
+        _stacktop    = _stackbottom - 0x10000; // ???
+#endif
 	setbuf(stdin, stdin_buf); 
 	setbuf(stdout, stdout_buf);
 	
